<resources>
    <string name="app_name">BookApp</string>

    <!-- Authentication -->
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register now</string>
    <string name="register_failed">Register failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="empty">Fields cannot be empty!</string>

    <!--Buttons-->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <!--BooksFragment-->
    <string name="add_book">Add book</string>
    <string name="book_index">Book catalogue</string>
    <string name="exchange_book">Exchange book</string>
    <string name="report">Report a mistake</string>

    <!--AddBookActivity-->
    <string name="title">Title</string>
    <string name="author_name">Author\'s name</string>
    <string name="author_surname">Author\'s surname</string>
    <string name="year">Year of first publication</string>
    <string name="publisher">Publisher</string>
    <string name="genre">Genre</string>
    <string name="multiple_authors">Add author</string>
    <string name="book_succes">Successfully added book</string>
    <string name="book_failed">Could not add book</string>

    <!--BookCatalogueFragment-->
    <string name="search_phrase">Enter a search phrase</string>

    <!--BookFragment-->
    <string name="author">Author</string>
    <string name="added_by">Added by</string>
    <string name="average_grade">Average grade</string>
    <string name="grade_book">Grade</string>
    <string name="report_mistake">Report mistake</string>
    <string name="navigate_back">Go back</string>
</resources>
