<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bookapp.BooksFragment">

    <Button
        android:id="@+id/button1"
        android:layout_width="208dp"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/book_index" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button1"
        android:layout_alignTop="@id/button1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/button1"
        android:text="@string/add_book" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignEnd="@id/button2"
        android:layout_alignStart="@id/button1"
        android:layout_below="@id/button1"
        android:layout_marginTop="10dp"
        android:text="@string/exchange_book" />

    <Button
        android:id="@+id/button4"
        android:layout_width="96dp"
        android:layout_height="fill_parent"
        android:layout_alignStart="@id/button3"
        android:layout_below="@id/button3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/report" />

</RelativeLayout>