<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bookapp.BookFragment"
    android:paddingTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/titleTV"
        style="@style/ModelsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        style="@style/Models"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/titleTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorTV"
        style="@style/ModelsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV" />

    <TextView
        android:id="@+id/authorText"
        style="@style/Models"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/authorTV"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <TextView
        android:id="@+id/yearTV"
        style="@style/ModelsNames"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorTV" />

    <TextView
        android:id="@+id/yearText"
        style="@style/Models"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/yearTV"
        app:layout_constraintTop_toBottomOf="@id/authorText" />

    <TextView
        android:id="@+id/genreTV"
        style="@style/ModelsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearTV" />

    <TextView
        android:id="@+id/genreText"
        style="@style/Models"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/genreTV"
        app:layout_constraintTop_toBottomOf="@id/yearText" />

    <TextView
        android:id="@+id/addedTV"
        style="@style/ModelsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/added_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreTV" />

    <TextView
        android:id="@+id/addedText"
        style="@style/Models"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/addedTV"
        app:layout_constraintTop_toBottomOf="@id/genreText" />

    <TextView
        android:id="@+id/averageGradeTV"
        style="@style/ModelsNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/average_grade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addedTV" />

    <TextView
        android:id="@+id/averageGradeText"
        style="@style/Models"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/averageGradeTV"
        app:layout_constraintTop_toBottomOf="@id/addedText" />

    <Spinner
        android:id="@+id/gradeSpinner"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="@id/gradeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/averageGradeTV"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/gradeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/grade_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gradeSpinner"
        app:layout_constraintTop_toBottomOf="@id/averageGradeTV" />

</android.support.constraint.ConstraintLayout>
